// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorField /> should render tlp marking badge 1`] = `
<DocumentFragment>
  <span
    class="euiBadge emotion-euiBadge"
    style="background-color: rgb(255, 126, 98); color: rgb(0, 0, 0);"
    title="Red"
  >
    <span
      class="euiBadge__content emotion-euiBadge__content"
    >
      <span
        class="euiBadge__text emotion-euiBadge__text"
      >
        Red
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<IndicatorField /> should return - 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;

exports[`<IndicatorField /> should return date-formatted value 1`] = `
<DocumentFragment>
  Dec 31, 2021 @ 20:01:01.000
</DocumentFragment>
`;

exports[`<IndicatorField /> should return non formatted value 1`] = `
<DocumentFragment>
  0.0.0.0
</DocumentFragment>
`;
